# ml-pipeline-thing

./: .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/src/: main.py  server.py
backend/src/controller/: __init__.py  health.py
backend/src/controller/v1/: __init__.py  pipelines.py  runs.py
backend/src/core/: exceptions.py
backend/src/core/config/: __init__.py  environments.py  settings.py
backend/src/core/database/: __init__.py  base.py  database.py  init.py
backend/src/core/database/migrations/: env.py
backend/src/core/database/migrations/versions/: 8354490d267e_initial_migration.py
backend/src/models/: __init__.py  core.py
backend/src/models/dto/: __init__.py  artifact.py  health.py  pagination.py  pipeline.py  run.py
backend/src/models/schema/: __init__.py  artifact.py  pipeline.py  run.py
backend/src/services/: __init__.py  pipeline_service.py  run_service.py
backend/tests/: conftest.py  test_health.py  test_pipelines.py
docs/: openapi.json
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppSidebar.tsx  CreatePipeline.tsx  DashboardLayout.tsx  PipelineList.tsx  PipelineView.tsx  RunHistory.tsx
frontend/src/pages/: CreatePipeline.tsx  Index.tsx  PipelineDetail.tsx  PipelineRuns.tsx  Pipelines.tsx
frontend/src/types/: index.ts  pipeline.ts
infra/docker/: compose.vps.yml
