[tool.poetry]
name = "ml-pipeline-thing"
version = "0.1.0"
description = "ML Pipeline Thing - lightweight pipeline orchestration API"
authors = ["gowth6m <gowtham4n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.6.1"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
python-multipart = "^0.0.6"
dotenv = "^0.9.9"
psutil = "^7.0.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
pylint = "^3.0.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
